# qt-extensions

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.gitlab/: test.yml  ubuntu.yml
include/QtEx/: QtEx
include/QtExtensions/: QtExtensions
libs/core/: .gitmodules  CMakeLists.txt  README.md
libs/core/include/QtExCore/: Logging  Math  Point1D  Point2D  Test
libs/core/include/QtExtensions/: Global  QMLRegistration  StaticConfig  Utility
libs/core/include/QtExtensions/Abstract/: IColorable  INameable
libs/core/src/c++/: qtexcore-global.h  qtexcore-logging.c++  qtexcore-logging.h  qtexcore-math.h  qtexcore-test-macro.h  utilities.c++  utilities.h
libs/core/src/c++/abstract/: qtexcore-icolorable.h  qtexcore-inameable.h
libs/core/src/c++/config/: staticconfig.c++  staticconfig.h
libs/core/src/c++/geometry/: qtexcore-point1d.c++  qtexcore-point1d.h  qtexcore-point2d.c++  qtexcore-point2d.h
libs/elevation/: CMakeLists.txt
libs/elevation/.gitlab/: test.yml  ubuntu.yml
libs/elevation/src/c++/: qtexelevation-algorithms.c++  qtexelevation-algorithms.h  qtexelevation-tile.c++  qtexelevation-tile.h  qtexelevation-tilestorage.c++  qtexelevation-tilestorage.h  qtexelevation-types.h
libs/elevation/src/c++/utils/: qtexelevation-polylineanalyzer.c++  qtexelevation-polylineanalyzer.h
libs/geo/: .gitmodules  CMakeLists.txt  README.md
libs/geo/.gitlab/: test.yml  ubuntu.yml
libs/geo/include/QtExGeo/: Orthodrom  Register  Traverse
libs/geo/include/QtExtensionsGeo/: GoogleMapsProvider  Math  TileLoader
libs/geo/src/c++/: qtexgeo-geomath.c++  qtexgeo-geomath.h  qtexgeo-orthodrom.c++  qtexgeo-orthodrom.h  qtexgeo-register.c++  qtexgeo-register.h  qtexgeo-tileloader.c++  qtexgeo-tileloader.h  qtexgeo-traverse.c++  qtexgeo-traverse.h
libs/geo/src/c++/providers/: qtexgeo-googlemapsprovider.c++  qtexgeo-googlemapsprovider.h
libs/scenegraph/: CMakeLists.txt  README.md
libs/scenegraph/include/QtExScenegraph/: QuickUtils  ScenegraphObject  ScenegraphUtils
libs/scenegraph/include/QtExScenegraph/Materials/: FadingGradient
libs/scenegraph/include/QtExtensionsScenegraph/: BasicPalette
libs/scenegraph/include/QtExtensionsScenegraph/Materials/: RadialGradient  State
libs/scenegraph/src/c++/: qtexsg-quickutils.c++  qtexsg-quickutils.h  qtexsg-scenegraph-utils.c++  qtexsg-scenegraph-utils.h  qtexsg-scenegraphobject.c++  qtexsg-scenegraphobject.h
libs/scenegraph/src/c++/gadgets/: qtexsg-basicpalette.c++  qtexsg-basicpalette.h
libs/scenegraph/src/c++/materials/: qtexsg-materials-fadinggradientshader.c++  qtexsg-materials-fadinggradientshader.h  qtexsg-materials-radialgradientshader.c++  qtexsg-materials-radialgradientshader.h  qtexsg-materials-state.h
libs/toolkit/: CMakeLists.txt
libs/toolkit/include/QtExToolkit/: ISettingsProvider
libs/toolkit/src/c++/: qtextk-isettingsprovider.h  qtextk-settings.c++  qtextk-settings.h
libs/toolkit/src/c++/settings/: qtextk-isettingsprovider.h  qtextk-monojsonsettingsprovider.c++  qtextk-monojsonsettingsprovider.h  qtextk-settings.c++  qtextk-settings.h
src/c++/: qtex-register.c++  qtex-register.h
tests/: libra-platform-test.c++  qtex-test-main.c++  qtexcore-cxxfeautures-test.c++  qtexcore-logging-test.c++  qtexcore-math-test.c++  qtexcore-points-test.c++  qtexelevation-pathanalyzer-test.c++
